--- a/arquivo1.html
+++ b/arquivo1.html
@@ -7,6 +7,6 @@
     <h1>Arquivo 1</h1>
     <p>Primeiro parágrafo</p>
     <p>Segundo parágrafo</p>
-    
+    <p>Terceiro parágrafo</p>
 </body>
 </html>
