--- a/arquivo1.html
+++ b/arquivo1.html
@@ -8,7 +8,6 @@
     <p>Primeiro parágrafo</p>
     <p>Segundo parágrafo</p>
     <p>Terceiro parágrafo</p>
-    <p>Quarto paragrafo</p>
-    <p>sadfgs</p>
+    <p>Quarto Parágrafo</p>
 </body>
 </html>
