Revert "adicionando quinto paragrafo"
This reverts commit c699eeb86a4c7ce002c55e390b5c5c6ebd36bca6.

--- a/arquivo1.html
+++ b/arquivo1.html
@@ -8,6 +8,7 @@
     <p>Primeiro parágrafo</p>
     <p>Segundo parágrafo</p>
     <p>Terceiro parágrafo</p>
-    <p>Quarto Parágrafo</p>
+    <p>Quarto paragrafo</p>
+    <p>sadfgs</p>
 </body>
 </html>
