adicionando novo paragrafo

--- a/arquivo1.html
+++ b/arquivo1.html
@@ -9,6 +9,6 @@
     <p>Segundo parágrafo</p>
     <p>Terceiro parágrafo</p>
     <p>Quarto paragrafo</p>
-    <p>sadfgs</p>
+    <p>sadfgsq</p>
 </body>
 </html>
