adicionando sexto paragrafo

--- a/arquivo1.html
+++ b/arquivo1.html
@@ -5,10 +5,11 @@
 </head>
 <body>
     <h1>Arquivo 1</h1>
-    <p>Primeiro par·grafo</p>
-    <p>Segundo par·grafo</p>
-    <p>Terceiro par·grafo</p>
+    <p>Primeiro par√°grafo</p>
+    <p>Segundo par√°grafo</p>
+    <p>Terceiro par√°grafo</p>
     <p>Quarto paragrafo</p>
     <p>sadfgsq</p>
+    <p>Sexto paragrafo</p>
 </body>
 </html>
