--- a/arquivo1.html
+++ b/arquivo1.html
@@ -4,6 +4,11 @@
     <title>Arquivo 1</title>
 </head>
 <body>
+    <style>
+        p{
+            color: #4cff00;
+        }
+    </style>
     <h1>Arquivo 1</h1>
     <p>Primeiro parágrafo</p>
     <p>Segundo parágrafo</p>
