--- a/arquivo1.html
+++ b/arquivo1.html
@@ -8,6 +8,10 @@
         p{
             color: #4cff00;
         }
+
+        title{
+            color: #ff0000
+        }
     </style>
     <h1>Arquivo 1</h1>
     <p>Primeiro parágrafo</p>
