alterando apenas a primeira letra

--- a/arquivo1.html
+++ b/arquivo1.html
@@ -8,6 +8,9 @@
         p{
             color: #4cff00;
         }
+        p:first-letter{
+            color: #a31ca9
+        }
     </style>
     <h1>Arquivo 1</h1>
     <p>Primeiro parágrafo</p>
